samples/_failures_safe/1761315425_3e96d0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7c3693a7.c: In function ‘main’:
./samples/SAFE/__tmp_7c3693a7.c:158:9: error: expected declaration or statement at end of input
  158 |         int choice;
      |         ^~~
./samples/SAFE/__tmp_7c3693a7.c:158:9: error: expected declaration or statement at end of input
